fix: fix nested timeline summary not wrapping

--- a/app/styles/components/content-editor.styl
+++ b/app/styles/components/content-editor.styl
@@ -54,6 +54,7 @@
 .mobiledoc-editor
 	display flex
 	flex-direction column-reverse
+	white-space initial
 	&__link-prompt
 		background-color #464646
 		color inherit
