--- a/app/styles/components/node-editor.styl
+++ b/app/styles/components/node-editor.styl
@@ -12,7 +12,8 @@
 		margin 0 -1em
 	&:hover
 		opacity 1
-
+.nested-timeline .timeline-edit-form .node-summary
+	margin 0
 .contextual-actions
 	transition 0.3s ease opacity
 	position absolute
